--- a/src/app/usit/components/employee-list/employee-list.component.html
+++ b/src/app/usit/components/employee-list/employee-list.component.html
@@ -22,115 +22,131 @@
   </div>
 
   <div id="table-container" class="table-wrapper">
-    <section class="table-style mat-elevation-z8">
-      <table mat-table [dataSource]="dataSource" matSort (matSortChange)="onSort($event)" class="responsive-table">
 
-        <!--- Note that these columns can be defined in any order.
-              The actual rendered columns are set as a property on the row definition" -->
+    <mat-tab-group (selectedTabChange)="onTabChanged($event)">
+      <mat-tab label="All">
+        <ng-container *ngTemplateOutlet="tableTemplate; context: { status: 'all' }"></ng-container>
+      </mat-tab>
+      <mat-tab label="Active">
+        <ng-container *ngTemplateOutlet="tableTemplate; context: { status: 'active' }"></ng-container>
+      </mat-tab>
+      <mat-tab label="Inactive">
+        <ng-container *ngTemplateOutlet="tableTemplate; context: { status: 'inactive' }"></ng-container>
+      </mat-tab>
+    </mat-tab-group>
 
-        <!-- serial Number Column mat-sort-header  -->
-        <ng-container matColumnDef="SerialNum">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Serial Number"> S.No
-          </th>
-          <td mat-cell *matCellDef="let element"> {{element?.serialNum}} </td>
-        </ng-container>
-
-        <!-- Name Column -->
-        <ng-container matColumnDef="Name">
-          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Name"> Name </th>
-          <td mat-cell *matCellDef="let element">
-            <span class="user-info" (click)="goToUserInfo(element.userid)">
-              {{element.fullname|titlecase}}
-            </span>
-            <ng-container *ngIf="element.locked; then updateStatTemplate else elseTemplate"></ng-container>
-            <ng-template #updateStatTemplate>
-              <span [style.cursor]="'pointer'" style="display: flex; flex-direction: row; align-items: center; gap: 2px;" >{{element.pseudoname|titlecase}}
-                <button [disabled]="!privilegeServ.hasPrivilege('STATUS_EMPLOYEE')" mat-raised-button (click)="unlock(element)"
-                  style="width: 65px; height: 15px;font-weight: bolder;background-color: orange;" [ngStyle]="{ color: 'white' }" >
-                 <span style="font-weight: bolder;">LOCKED</span> 
+    <ng-template #tableTemplate>
+      <section class="table-style mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="onSort($event)" class="responsive-table">
+  
+          <!--- Note that these columns can be defined in any order.
+                The actual rendered columns are set as a property on the row definition" -->
+  
+          <!-- serial Number Column mat-sort-header  -->
+          <ng-container matColumnDef="SerialNum">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Serial Number"> S.No
+            </th>
+            <td mat-cell *matCellDef="let element"> {{element?.serialNum}} </td>
+          </ng-container>
+  
+          <!-- Name Column -->
+          <ng-container matColumnDef="Name">
+            <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Name"> Name </th>
+            <td mat-cell *matCellDef="let element">
+              <span class="user-info" (click)="goToUserInfo(element.userid)">
+                {{element.fullname|titlecase}}
+              </span>
+              <ng-container *ngIf="element.locked; then updateStatTemplate else elseTemplate"></ng-container>
+              <ng-template #updateStatTemplate>
+                <span [style.cursor]="'pointer'" style="display: flex; flex-direction: row; align-items: center; gap: 2px;" >{{element.pseudoname|titlecase}}
+                  <button [disabled]="!privilegeServ.hasPrivilege('STATUS_EMPLOYEE')" mat-raised-button (click)="unlock(element)"
+                    style="width: 65px; height: 15px;font-weight: bolder;background-color: orange;" [ngStyle]="{ color: 'white' }" >
+                   <span style="font-weight: bolder;">LOCKED</span> 
+                  </button>
+                </span>
+                <!--(click)="onStatusUpdate(emp)"-->
+              </ng-template>
+              <ng-template #elseTemplate>
+                {{element.pseudoname}}
+              </ng-template>
+  
+            </td>
+          </ng-container>
+  
+          <!-- Email Column -->
+          <ng-container matColumnDef="Email">
+            <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Email"> Email </th>
+            <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+          </ng-container>
+  
+          <!-- Personal/Comp Number Column -->
+          <ng-container matColumnDef="PersonalOrCompanyNumber">
+            <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Personal/Comp Number">
+              Personal/Comp Number </th>
+            <td mat-cell *matCellDef="let element">
+              <span *ngIf="element.personalcontactnumber != null">{{element.personalcontactnumber}}</span>
+              <br>
+              <span *ngIf="element.companycontactnumber != null">{{element.companycontactnumber}}</span>
+            </td>
+          </ng-container>
+  
+          <!-- Designation Column -->
+          <ng-container matColumnDef="Designation">
+            <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Designation"> Designation
+            </th>
+            <td mat-cell *matCellDef="let element"> {{element.designation}} </td>
+          </ng-container>
+  
+          <!-- Department Column -->
+          <ng-container matColumnDef="Department">
+            <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Department"> Department
+            </th>
+            <td mat-cell *matCellDef="let element"> {{element.department}} </td>
+          </ng-container>
+  
+          <!-- Status Column -->
+          <!-- <ng-container matColumnDef="Status">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Status"> Status </th>
+            <td mat-cell *matCellDef="let emp" [ngStyle]="{ backGroundColor: emp.status === 'Active' ? 'green' : 'accent' }" ><span><button mat-raised-button (click)="onStatusUpdate(emp)" > {{emp.status}}</button> </span></td>
+          </ng-container> -->
+          <ng-container matColumnDef="Status">
+            <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Status"> Status </th>
+            <td mat-cell *matCellDef="let emp">
+              <span>
+                <button [disabled]="!privilegeServ.hasPrivilege('STATUS_EMPLOYEE')" mat-raised-button
+                  (click)="onStatusUpdate(emp)" style="width: 60px; height: 25px;" [ngStyle]="{ color: 'white' }"
+                  [ngClass]="emp.status === 'Active' ? 'mat-primary' : 'mat-warn'">
+                  {{ emp.status }}
                 </button>
               </span>
-              <!--(click)="onStatusUpdate(emp)"-->
-            </ng-template>
-            <ng-template #elseTemplate>
-              {{element.pseudoname}}
-            </ng-template>
-
-          </td>
-        </ng-container>
-
-        <!-- Email Column -->
-        <ng-container matColumnDef="Email">
-          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Email"> Email </th>
-          <td mat-cell *matCellDef="let element"> {{element.email}} </td>
-        </ng-container>
-
-        <!-- Personal/Comp Number Column -->
-        <ng-container matColumnDef="PersonalOrCompanyNumber">
-          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Personal/Comp Number">
-            Personal/Comp Number </th>
-          <td mat-cell *matCellDef="let element">
-            <span *ngIf="element.personalcontactnumber != null">{{element.personalcontactnumber}}</span>
-            <br>
-            <span *ngIf="element.companycontactnumber != null">{{element.companycontactnumber}}</span>
-          </td>
-        </ng-container>
-
-        <!-- Designation Column -->
-        <ng-container matColumnDef="Designation">
-          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Designation"> Designation
-          </th>
-          <td mat-cell *matCellDef="let element"> {{element.designation}} </td>
-        </ng-container>
-
-        <!-- Department Column -->
-        <ng-container matColumnDef="Department">
-          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Department"> Department
-          </th>
-          <td mat-cell *matCellDef="let element"> {{element.department}} </td>
-        </ng-container>
-
-        <!-- Status Column -->
-        <!-- <ng-container matColumnDef="Status">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Status"> Status </th>
-          <td mat-cell *matCellDef="let emp" [ngStyle]="{ backGroundColor: emp.status === 'Active' ? 'green' : 'accent' }" ><span><button mat-raised-button (click)="onStatusUpdate(emp)" > {{emp.status}}</button> </span></td>
-        </ng-container> -->
-        <ng-container matColumnDef="Status">
-          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Status"> Status </th>
-          <td mat-cell *matCellDef="let emp">
-            <span>
-              <button [disabled]="!privilegeServ.hasPrivilege('STATUS_EMPLOYEE')" mat-raised-button
-                (click)="onStatusUpdate(emp)" style="width: 60px; height: 25px;" [ngStyle]="{ color: 'white' }"
-                [ngClass]="emp.status === 'Active' ? 'mat-primary' : 'mat-warn'">
-                {{ emp.status }}
-              </button>
-            </span>
-          </td>
-        </ng-container>
-
-        <!-- Action Column -->
-        <ng-container matColumnDef="Action">
-          <th mat-header-cell *matHeaderCellDef> Action </th>
-          <td mat-cell *matCellDef="let emp" class="action-buttons">
-            <span class="action-btns">
-              <button [disabled]="!privilegeServ.hasPrivilege('EDIT_EMPLOYEE')" mat-icon-button
-                (click)="editEmployee(emp)" class="action-button-ed">
-                <mat-icon>edit</mat-icon>
-              </button>
-              <button [disabled]="!privilegeServ.hasPrivilege('DELETE_EMPLOYEE')" mat-icon-button
-                (click)="deleteEmployee(emp)" class="action-button-ed">
-                <mat-icon [ngClass]="{'delete-icon': privilegeServ.hasPrivilege('DELETE_EMPLOYEE')}">delete</mat-icon>
-              </button>
-            </span>
-          </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="dataTableColumns; sticky: true"></tr>
-        <tr mat-row *matRowDef="let row; columns: dataTableColumns;"></tr>
-      </table>
-      <p class="no-data-found" *ngIf="!dataSource.filteredData.length">{{'No matching data found'}}</p>
-    </section>
-    <hr>
+            </td>
+          </ng-container>
+  
+          <!-- Action Column -->
+          <ng-container matColumnDef="Action">
+            <th mat-header-cell *matHeaderCellDef> Action </th>
+            <td mat-cell *matCellDef="let emp" class="action-buttons">
+              <span class="action-btns">
+                <button [disabled]="!privilegeServ.hasPrivilege('EDIT_EMPLOYEE')" mat-icon-button
+                  (click)="editEmployee(emp)" class="action-button-ed">
+                  <mat-icon>edit</mat-icon>
+                </button>
+                <button [disabled]="!privilegeServ.hasPrivilege('DELETE_EMPLOYEE')" mat-icon-button
+                  (click)="deleteEmployee(emp)" class="action-button-ed">
+                  <mat-icon [ngClass]="{'delete-icon': privilegeServ.hasPrivilege('DELETE_EMPLOYEE')}">delete</mat-icon>
+                </button>
+              </span>
+            </td>
+          </ng-container>
+  
+          <tr mat-header-row *matHeaderRowDef="dataTableColumns; sticky: true"></tr>
+          <tr mat-row *matRowDef="let row; columns: dataTableColumns;"></tr>
+        </table>
+        <p class="no-data-found" *ngIf="!dataSource.filteredData.length">{{'No matching data found'}}</p>
+      </section>
+      <hr>
+    </ng-template>
+    
   </div>
 
   <div class="paginator">
