h1b-immigration search addition

--- a/src/app/usit/components/Immigration/h1b-immigration/h1b-immigration.component.html
+++ b/src/app/usit/components/Immigration/h1b-immigration/h1b-immigration.component.html
@@ -14,7 +14,7 @@
             </button>
 
             <div class="search-h1b">
-                <input matInput type="text" class="search" placeholder="search H1B" (keyup)="applyFilter($event)">
+                <input matInput type="text" class="search" placeholder="search H1B" (keyup)="onFilter($event)">
             </div>
         </div>
     </div>
