--- a/src/app/usit/components/dashboard/dashboard.component.html
+++ b/src/app/usit/components/dashboard/dashboard.component.html
@@ -224,13 +224,13 @@
               <ng-container matColumnDef="Name">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Name"> Name </th>
                 <td mat-cell *matCellDef="let element">
-                  <a href="{{ element.profile_url }}" target="_blank">{{ element.candidate_name }}</a>
+                  <a href="{{ element.profile_url }}" target="_blank">{{ element.candidate_name |titlecase}}</a>
                 </td>
               </ng-container>
               <ng-container matColumnDef="Category">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Category"> Category
                 </th>
-                <td mat-cell *matCellDef="let element"> {{element?.category}} </td>
+                <td mat-cell *matCellDef="let element"> {{element?.category|titlecase}} </td>
               </ng-container>
               <ng-container matColumnDef="Address">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Address"> Address
@@ -273,6 +273,7 @@
         <div class="header-container-leading-resources">
           <span class="header-text">Daily Requirement Tags</span>
         </div>
+        
         <hr>
         <section class="table-style-dice mat-elevation-z8" style="height:450px; overflow-Y: scroll;overflow-x: scroll">
           <table mat-table [dataSource]="dataSourceDice" class="responsive-table;">
@@ -573,42 +574,38 @@
       </div>
     </div>
   </div>  -->
-
+  <div class="header mat-elevation-z1">
+    <span class="header-text">
+        Daily Requirements(Tagged Count) &nbsp;&nbsp;&nbsp;
+    </span></div>
 <form [formGroup]="myForm" >
   <div class="table-container-dice table-wrapper" style="margin-bottom: 120px;" *ngIf="sourcingLead">
     <div class="header-container-leading-resources" style="padding-right: 6px;">
-      <span class="header-text">Daily Requirements(Tagged Count)</span>
-
-<mat-form-field style=" margin-top:1rem;width:10rem;background-color: #eae9e9;font-size: 0px;  ">
-        <mat-label>Start Date</mat-label>
-        <input matInput [matDatepicker]="picker1" formControlName="startDate" />
-
-       <!-- <mat-hint>MM/DD/YYYY</mat-hint>-->
-      <mat-datepicker-toggle matIconSuffix [for]="picker1"></mat-datepicker-toggle>
-        <mat-datepicker #picker1></mat-datepicker>
-        
-      </mat-form-field>
-
-      <mat-form-field style="margin-top:1rem;width:10rem;background-color:  #eae9e9;">
-        <mat-label>End Date</mat-label>
-        <input matInput [matDatepicker]="picker2" formControlName="endDate" />
-        <!-- <mat-hint>MM/DD/YYYY</mat-hint> -->
-        <mat-datepicker-toggle matIconSuffix [for]="picker2"></mat-datepicker-toggle>
-        <mat-datepicker #picker2 color="primary"></mat-datepicker>
-      </mat-form-field> 
-     
-      <mat-form-field style="margin-top:0.95rem;margin-right:10rem;width:12rem;background-color: #e2dede;">
-        <mat-label>EmployeeName</mat-label>
-        <mat-select formControlName="benchSalesEmployees" (selectionChange)="onEmployeeChange($event)">
-          <mat-option *ngFor="let option of benchSalesEmployees" [value]="option[0]">{{ option[1] }}</mat-option>
-        </mat-select>
-        
+      <span class="header-text" style="font-size: 14px;margin-top: 0.1rem;"></span>
       
-      </mat-form-field>
+  <div style=" margin-right: 1rem;">
+    <label for="startDate" style="font-size: 12px;font-weight: bold;">Start Date:</label>
+    <input type="date" id="startDate" name="startDate" style="width: 8rem; background-color: #eae9e9; border: 1px solid #ccc;height:0.3rem; padding: 8px;"formControlName="startDate"  >
+</div>
+
+<div style=" margin-right: 1rem;">
+    <label for="endDate" style="font-size: 12px;font-weight: bold">End Date:</label>
+    <input type="date" id="endDate" name="endDate" style="width: 8rem; background-color: #eae9e9; border: 1px solid #ccc; height:0.3rem;padding: 8px;"[formControl]="myForm.get('endDate')">
+</div>
+     <div style=" margin-right: 1rem; width: 10rem;">
+
+  <select id="benchSalesEmployees"  style="background-color: #eae9e9;height: 1.7rem;" (change)="onEmployeeChange($event.target)"  >
+    <option value="" disabled selected hidden> Employee Name</option>
+      <option *ngFor="let option of benchSalesEmployees" [value]="option[0]">{{ option[1] }}</option>
+  </select>
+</div>
+
+
+    
       <div class="btn">
-      <button mat-raised-button color="primary" style="width:2rem;height:30px;" (click)="refreshData()">Refresh</button>
+      <button mat-raised-button color="primary" style="width:2rem;height:35px;" (click)="refreshData()">Refresh</button>
     </div>
-    <button  *ngIf="showReport"  class="search" mat-raised-button color="primary"  (click)="handleExport()">Excel Import</button>
+    <button  *ngIf="showReport"  class="search" mat-raised-button color="primary" style="height:35px" (click)="handleExport()" >Excel Import</button>
       <!-- </form> -->
       <div class="vendor-actions">
         <div class="search-vendor">
@@ -632,7 +629,7 @@
           <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by JobTitle"> Job Title
           </th>
           <td mat-cell *matCellDef="let element"> <a href="{{ element.job_source }}"
-              target="_blank">{{element?.job_title}}</a> </td>
+              target="_blank">{{element?.job_title|titlecase}}</a> </td>
         </ng-container>
 
         <!-- Category Column -->
@@ -653,7 +650,7 @@
         <ng-container matColumnDef="Vendor">
           <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Vendor">
             Vendor </th>
-          <td mat-cell *matCellDef="let element">{{element.vendor}}</td>
+          <td mat-cell *matCellDef="let element">{{element.vendor|titlecase}}</td>
         </ng-container>
 
         <!-- Owner Column -->
@@ -687,6 +684,7 @@
   </div>
 
 </form>
+
 </div>
 
 <br>
