--- a/src/app/usit/components/vendor-management/future-primary-vendor-list/future-primary-vendor-list.component.html
+++ b/src/app/usit/components/vendor-management/future-primary-vendor-list/future-primary-vendor-list.component.html
@@ -126,6 +126,9 @@
                   (click)="editVendor(vendor)" class="action-button-ed">
                   <mat-icon [ngClass]="{'edit-icon': privilegeServ.hasPrivilege('EDIT_VENDOR')}">edit</mat-icon>
                 </button>
+                <button mat-icon-button [style.cursor]="'pointer'" matTooltip="Move to Vendor or CPV" matTooltipPosition="above" (click)="moveVendorToVendorOrFpv(vendor)">
+                  <mat-icon class="edit-icon">arrow_forward</mat-icon>
+                </button>
                 <button [disabled]="!privilegeServ.hasPrivilege('DELETE_VENDOR')" mat-icon-button
                   (click)="deleteVendor(vendor)" class="action-button-ed">
                   <mat-icon [ngClass]="{'delete-icon': privilegeServ.hasPrivilege('DELETE_VENDOR')}">delete</mat-icon>
