sorting, removing dollar symbol in hourly rate and requirement info job description view changes

--- a/src/app/usit/components/Immigration/future-opt-cpt/future-opt-cpt.component.html
+++ b/src/app/usit/components/Immigration/future-opt-cpt/future-opt-cpt.component.html
@@ -56,7 +56,7 @@
 
                 <!-- Beneficiary First Name Column-->
                 <ng-container matColumnDef="BeneficiaryFirstName">
-                    <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by BeneficiaryFirstName"> Beneficiary First Name </th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by BeneficiaryFirstName"> Beneficiary First Name </th>
                     <td mat-cell *matCellDef="let element">{{element?.h1validto}} </td>
                 </ng-container>
 
