--- a/src/app/usit/components/recruitment/requirement-list/requirement-info/requirement-info.component.html
+++ b/src/app/usit/components/recruitment/requirement-list/requirement-info/requirement-info.component.html
@@ -43,8 +43,8 @@
       </div>
       <div class="info-item">
         <span class="static-label">Job Description :</span>
-        <span class="dynamic-value">{{dataSource.jobdescription}}</span>
-      </div>
+        <span class="dynamic-value" style="white-space: pre-line;">{{dataSource.jobdescription}}</span>
+      </div>  
     </div>
   </mat-card-content>
 </mat-card>
