--- a/src/app/usit/components/sales/h1transfer/h1transfer.component.html
+++ b/src/app/usit/components/sales/h1transfer/h1transfer.component.html
@@ -52,7 +52,7 @@
 
                 <!-- Experience Column-->
                 <ng-container matColumnDef="Experience">
-                    <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Experience"> Experience </th>
+                    <th mat-header-cell *matHeaderCellDef  mat-sort-header sortActionDescription="Sort by Experience"> Experience </th>
                     <td mat-cell *matCellDef="let element">{{element?.experience}} </td>
                 </ng-container>
 
