--- a/src/app/usit/components/employee-list/employee-list.component.html
+++ b/src/app/usit/components/employee-list/employee-list.component.html
@@ -51,7 +51,7 @@
   
           <!-- Name Column -->
           <ng-container matColumnDef="Name">
-            <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Name"> Name </th>
+            <th mat-header-cell *matHeaderCellDef  mat-sort-header sortActionDescription="Sort by Name"> Name </th>
             <td mat-cell *matCellDef="let element">
               <span class="user-info" (click)="goToUserInfo(element.userid)">
                 {{element.fullname|titlecase}}
@@ -66,7 +66,7 @@
                 </span>
                 <!--(click)="onStatusUpdate(emp)"-->
               </ng-template>
-              <ng-template #elseTemplate>
+              <ng-template  #elseTemplate>
                 {{element.pseudoname}}
               </ng-template>
   
@@ -75,13 +75,13 @@
   
           <!-- Email Column -->
           <ng-container matColumnDef="Email">
-            <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Email"> Email </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Email"> Email </th>
             <td mat-cell *matCellDef="let element"> {{element.email}} </td>
           </ng-container>
   
           <!-- Personal/Comp Number Column -->
           <ng-container matColumnDef="PersonalOrCompanyNumber">
-            <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Personal/Comp Number">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header  sortActionDescription="Sort by Personal/Comp Number">
               Personal/Comp Number </th>
             <td mat-cell *matCellDef="let element">
               <span *ngIf="element.personalcontactnumber != null">{{element.personalcontactnumber}}</span>
@@ -92,14 +92,14 @@
   
           <!-- Designation Column -->
           <ng-container matColumnDef="Designation">
-            <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Designation"> Designation
+            <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Designation"> Designation
             </th>
             <td mat-cell *matCellDef="let element"> {{element.designation}} </td>
           </ng-container>
   
           <!-- Department Column -->
           <ng-container matColumnDef="Department">
-            <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Department"> Department
+            <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Department"> Department
             </th>
             <td mat-cell *matCellDef="let element"> {{element.department}} </td>
           </ng-container>
@@ -110,7 +110,7 @@
             <td mat-cell *matCellDef="let emp" [ngStyle]="{ backGroundColor: emp.status === 'Active' ? 'green' : 'accent' }" ><span><button mat-raised-button (click)="onStatusUpdate(emp)" > {{emp.status}}</button> </span></td>
           </ng-container> -->
           <ng-container matColumnDef="Status">
-            <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Status"> Status </th>
+            <th mat-header-cell *matHeaderCellDef  mat-sort-header sortActionDescription="Sort by Status"> Status </th>
             <td mat-cell *matCellDef="let emp">
               <span>
                 <button [disabled]="!privilegeServ.hasPrivilege('STATUS_EMPLOYEE')" mat-raised-button
