--- a/src/app/usit/components/sales/closure-list/closure-list.component.html
+++ b/src/app/usit/components/sales/closure-list/closure-list.component.html
@@ -96,7 +96,7 @@
                 <!-- Rate Column -->
                 <ng-container matColumnDef="Rate">
                     <th mat-header-cell *matHeaderCellDef> Rate </th>
-                    <td mat-cell *matCellDef="let element"> {{element?.submissionrate}} </td>
+                    <td mat-cell *matCellDef="let element"> {{ NumericValue(element?.submissionrate)}} </td>
                 </ng-container>
     
                 <!-- Employee Column -->
