--- a/src/app/usit/components/sales/consultant-list/consultant-list.component.html
+++ b/src/app/usit/components/sales/consultant-list/consultant-list.component.html
@@ -70,9 +70,9 @@
 
         <!-- SNo Column  mat-sort-header-->
         <ng-container matColumnDef="SerialNum">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Serial Number"> S.No
+          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Serial Number"style="width:1%"> S.No
           </th>
-          <td mat-cell *matCellDef="let element"> {{element?.serialNum}} </td>
+          <td mat-cell *matCellDef="let element" style="width:1%"> {{element?.serialNum}} </td>
         </ng-container>
         <!-- Date-->
         <ng-container matColumnDef="Date">
@@ -150,9 +150,9 @@
 
         <!-- Exp Column -->
         <ng-container matColumnDef="Experience">
-          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Experience" mat-sort-header> Experience
+          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Experience" mat-sort-header style="width: 3%;"> Experience
           </th>
-          <td mat-cell *matCellDef="let element" class="text-align"> {{element.experience}} </td>
+          <td mat-cell *matCellDef="let element" class="text-align" style="width: 3%;"> {{element.experience}} </td>
         </ng-container>
 
         <!-- Relocation Column -->
@@ -165,7 +165,7 @@
         <!-- RAte Column -->
         <ng-container matColumnDef="Rate">
           <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Rate" mat-sort-header> Rate </th>
-          <td mat-cell *matCellDef="let element" class="text-align"> {{element.hourlyrate}}</td>
+          <td mat-cell *matCellDef="let element" class="text-align"> {{ NumericValue(element.hourlyrate) }}</td>
         </ng-container>
 
         <!-- Added By -->
@@ -187,7 +187,7 @@
         </ng-container>
         <!-- Priority Column -->
         <ng-container matColumnDef="Priority">
-          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Priority" mat-sort-header>Priority </th>
+          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Priority" mat-sort-header >Priority </th>
           <td mat-cell *matCellDef="let element"> {{element.priority}} </td>
         </ng-container>
 
