--- a/src/app/usit/components/sales/submission-list/submission-list.component.html
+++ b/src/app/usit/components/sales/submission-list/submission-list.component.html
@@ -122,13 +122,24 @@
                     <td mat-cell *matCellDef="let element"> {{element?.vendor|titlecase}}
                     </td>
                 </ng-container>
-                <!-- Sub Rate Column -->
+                <!-- Sub Rate Column 
                 <ng-container matColumnDef="SubRate">
                     <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by SubRate" mat-sort-header>
                         Sub Rate</th>
-                    <td mat-cell *matCellDef="let element"> {{element.submissionrate}}
+                    <td mat-cell *matCellDef="let element">  {{ NumericValue(element.submissionrate)}}
                     </td>
-                </ng-container>
+                </ng-container>-->
+                <ng-container matColumnDef="SubRate">
+                    <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by SubRate" mat-sort-header>
+                      Sub Rate
+                    </th>
+                    <td mat-cell *matCellDef="let element">  
+                      <!-- Check if flag is set to "Recruiting" before applying the NumericValue method -->
+                      {{ (flag === 'Recruiting' || flag === 'Sales') ? NumericValue(element.submissionrate) : element.submissionrate }}
+                      
+                    </td>
+                  </ng-container>
+                  
                 <!-- Project Location Column -->
                 <ng-container matColumnDef="ProjectLocation">
                     <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by ProjectLocation" mat-sort-header>
