--- a/src/app/usit/components/sales/submission-list/submission-list.component.scss
+++ b/src/app/usit/components/sales/submission-list/submission-list.component.scss
@@ -194,26 +194,26 @@ tbody {
   display: flex;
   //justify-content: space-between;
   align-items: center;
-  height: 43px;
+  // height: 43px;
 }
 
-.action-buttons button {
-  margin: 0;
-  padding: 0;
-  width: 30px;
-  height: 30px;
-}
+// .action-buttons button {
+//   margin: 0;
+//   padding: 0;
+//   width: 30px;
+//   height: 30px;
+// }
 
-::ng-deep .action-button-ed .mat-mdc-button-touch-target {
-  width: 30px !important;
-  height: 30px !important;
-}
+// ::ng-deep .action-button-ed .mat-mdc-button-touch-target {
+//   width: 30px !important;
+//   height: 30px !important;
+// }
 
-::ng-deep .action-button-ed .mat-mdc-focus-indicator {
-  width: 30px !important;
-  height: 30px !important;
-  top: 10px;
-}
+// ::ng-deep .action-button-ed .mat-mdc-focus-indicator {
+//   width: 30px !important;
+//   height: 30px !important;
+//   top: 10px;
+// }
 
 .filter-vendors {
   display: flex;
@@ -254,7 +254,7 @@ tbody {
 td.approve-buttons.cdk-cell.cdk-column-Approve-Reject.mat-column-Approve-Reject.mat-mdc-cell.mdc-data-table__cell.ng-star-inserted {
   display: flex;
   column-gap: 5px;
-  height: 49px;
+  // height: 49px;
   align-items: center;
 }
 
@@ -262,9 +262,9 @@ td.approve-buttons.cdk-cell.cdk-column-Approve-Reject.mat-column-Approve-Reject.
   height: 30px !important;
 }
 
-.mat-mdc-row {
-  height: 30px !important;
-}
+// .mat-mdc-row {
+//   height: 30px !important;
+// }
 
 .filter-button {
   width: fit-content;
@@ -316,4 +316,53 @@ ul.breadcrumb li:last-child {
 .consultant-id{
   cursor: pointer;
   color:#0275d8
+}
+
+::ng-deep .mat-mdc-paginator .mat-mdc-button-persistent-ripple.mdc-icon-button__ripple {
+  height: 24px;
+  width: 24px;
+}
+
+::ng-deep .mat-mdc-paginator .mat-mdc-focus-indicator {
+  height: 24px;
+  width: 24px;
+}
+
+::ng-deep .mat-mdc-paginator .mat-mdc-icon-button .mat-mdc-button-touch-target {
+  height: 24px;
+  width: 24px;
+}
+
+::ng-deep .mat-mdc-paginator .mat-mdc-icon-button mat-mdc-tooltip-trigger mat-mdc-paginator-navigation-first mdc-icon-button mat-mdc-icon-button mat-unthemed mat-mdc-button-base mat-mdc-tooltip-disabled ng-star-inserted {
+  height: 24px;
+  width: 24px;
+}
+
+::ng-deep .mat-mdc-paginator .mat-mdc-icon-button .mat-mdc-button-base {
+  padding: 0px !important;
+  height: 24px;
+  width: 24px;
+}
+
+::ng-deep .mat-mdc-paginator .mat-mdc-icon-button {
+  padding: 0px !important;
+  height: 24px;
+  width: 24px;
+}
+
+.action-buttons .mat-mdc-icon-button.mat-mdc-button-base {
+  --mdc-icon-button-state-layer-size: 24px;
+  width: var(--mdc-icon-button-state-layer-size);
+  height: var(--mdc-icon-button-state-layer-size);
+  padding: 0px !important;
+}
+
+::ng-deep .action-button-ed .mat-mdc-button-touch-target {
+  width: 24px !important;
+  height: 24px !important;
+}
+
+::ng-deep .action-button-ed .mat-mdc-focus-indicator {
+  width: 24px !important;
+  height: 24px !important;
 }
