--- a/src/app/usit/components/vendor-management/vendor-list/vendor-company-rec-info/vendor-company-rec-info.component.html
+++ b/src/app/usit/components/vendor-management/vendor-list/vendor-company-rec-info/vendor-company-rec-info.component.html
@@ -57,7 +57,7 @@
 
       </table>
       <hr>
-      <p class="no-data-found" *ngIf="!dataSource.data.length">{{'Vendor Company Info is not available!'}}</p>
+      <p class="no-data-found" *ngIf="!dataSource.data.length">{{'No recruiters found'}}</p>
     </section>
       <!-- paginator -->
 
