--- a/src/app/usit/components/Immigration/h1b-immigration/h1b-immigration.component.scss
+++ b/src/app/usit/components/Immigration/h1b-immigration/h1b-immigration.component.scss
@@ -166,26 +166,26 @@
   .action-buttons {
     display: flex;
     align-items: center;
-    height: 43px;
+    // height: 43px;
   }
   
-  .action-buttons button {
-    margin: 0;
-    padding: 0;
-    width: 30px;
-    height: 30px;
-  }
+  // .action-buttons button {
+  //   margin: 0;
+  //   padding: 0;
+  //   width: 30px;
+  //   height: 30px;
+  // }
   
-  ::ng-deep .action-button-ed .mat-mdc-button-touch-target {
-    width: 30px !important;
-    height: 30px !important;
-  }
+  // ::ng-deep .action-button-ed .mat-mdc-button-touch-target {
+  //   width: 30px !important;
+  //   height: 30px !important;
+  // }
   
-  ::ng-deep .action-button-ed .mat-mdc-focus-indicator {
-    width: 30px !important;
-    height: 30px !important;
-    top: 10px;
-  }
+  // ::ng-deep .action-button-ed .mat-mdc-focus-indicator {
+  //   width: 30px !important;
+  //   height: 30px !important;
+  //   top: 10px;
+  // }
   
   // @media screen and (min-width: 2000px) {
   //   .h1b-table-style {
@@ -220,3 +220,20 @@
   //     height: 90vh;
   //   }
   // }
+
+  .action-buttons .mat-mdc-icon-button.mat-mdc-button-base {
+    --mdc-icon-button-state-layer-size: 24px;
+    width: var(--mdc-icon-button-state-layer-size);
+    height: var(--mdc-icon-button-state-layer-size);
+    padding: 0px !important;
+  }
+  
+  ::ng-deep .action-button-ed .mat-mdc-button-touch-target {
+    width: 24px !important;
+    height: 24px !important;
+  }
+
+  ::ng-deep .action-button-ed .mat-mdc-focus-indicator {
+    width: 24px !important;
+    height: 24px !important;
+  }
