--- a/src/app/usit/components/employee-list/employee-list.component.html
+++ b/src/app/usit/components/employee-list/employee-list.component.html
@@ -125,7 +125,7 @@
           <!-- Action Column -->
           <ng-container matColumnDef="Action">
             <th mat-header-cell *matHeaderCellDef> Action </th>
-            <td mat-cell *matCellDef="let emp" class="action-buttons">
+            <td mat-cell *matCellDef="let emp" class="action-buttons" style="white-space: nowrap;">
               <span class="action-btns">
                 <button [disabled]="!privilegeServ.hasPrivilege('EDIT_EMPLOYEE')" mat-icon-button
                   (click)="editEmployee(emp)" class="action-button-ed">
