--- a/src/app/usit/components/tech-support-list/tech-support-list.component.scss
+++ b/src/app/usit/components/tech-support-list/tech-support-list.component.scss
@@ -60,9 +60,9 @@
   .mat-sort-header-arrow {
     color: #1a1717;
   }
-  .mat-mdc-row  {
-    height: 48px !important;
-  }
+  // .mat-mdc-row  {
+  //   height: 48px !important;
+  // }
   .mat-mdc-column {
     border-right: 1px solid currentColor;
   }
@@ -197,39 +197,38 @@
     // }
   }
   
-  .action-buttons {
-    display: flex;
-    //justify-content: space-between;
-    align-items: center;
+  // .action-buttons {
+  //   display: flex;
+  //   //justify-content: space-between;
+  //   align-items: center;
+  // }
   
-  }
+  // .action-buttons button {
+  //   margin: 0;
+  //   padding: 0;
+  //   width: 30px;
+  //   height: 30px;
+  // }
   
-  .action-buttons button {
-    margin: 0;
-    padding: 0;
-    width: 30px;
-    height: 30px;
-  }
+  // ::ng-deep .action-button-ed .mat-mdc-button-touch-target {
+  //   width: 30px !important;
+  //   height: 30px !important;
+  // }
   
-  ::ng-deep .action-button-ed .mat-mdc-button-touch-target {
-    width: 30px !important;
-    height: 30px !important;
-  }
-  
-  ::ng-deep .action-button-ed .mat-mdc-focus-indicator {
-    width: 30px !important;
-    height: 30px !important;
-    top: 10px;
-  }
+  // ::ng-deep .action-button-ed .mat-mdc-focus-indicator {
+  //   width: 30px !important;
+  //   height: 30px !important;
+  //   top: 10px;
+  // }
   
   
   .mat-mdc-header-row {
     height: 30px !important;
   }
   
-  .mat-mdc-row {
-    height: 30px !important;
-  }
+  // .mat-mdc-row {
+  //   height: 30px !important;
+  // }
   
   ul.breadcrumb li:last-child {
     color: black;
@@ -249,3 +248,20 @@
   //     height: 90vh;
   //   }
   // }
+
+  .action-buttons .mat-mdc-icon-button.mat-mdc-button-base {
+    --mdc-icon-button-state-layer-size: 24px;
+    width: var(--mdc-icon-button-state-layer-size);
+    height: var(--mdc-icon-button-state-layer-size);
+    padding: 0px !important;
+  }
+  
+  ::ng-deep .action-button-ed .mat-mdc-button-touch-target {
+    width: 24px !important;
+    height: 24px !important;
+  }
+
+  ::ng-deep .action-button-ed .mat-mdc-focus-indicator {
+    width: 24px !important;
+    height: 24px !important;
+  }
