--- a/src/app/usit/components/technology-tag-list/technology-tag-list.component.scss
+++ b/src/app/usit/components/technology-tag-list/technology-tag-list.component.scss
@@ -174,9 +174,9 @@ tbody {
   height: 30px !important;
 }
 
-.mat-mdc-row {
-  height: 30px !important;
-}
+// .mat-mdc-row {
+//   height: 30px !important;
+// }
 
 .filter-button {
   width: fit-content;
@@ -191,4 +191,21 @@ ul.breadcrumb li:last-child {
 .consultant-name a {
   text-decoration: none;
   color: #0d6efd;
+}
+
+.action-buttons .mat-mdc-icon-button.mat-mdc-button-base {
+  --mdc-icon-button-state-layer-size: 24px;
+  width: var(--mdc-icon-button-state-layer-size);
+  height: var(--mdc-icon-button-state-layer-size);
+  padding: 0px !important;
+}
+
+::ng-deep .action-button-ed .mat-mdc-button-touch-target {
+  width: 24px !important;
+  height: 24px !important;
+}
+
+::ng-deep .action-button-ed .mat-mdc-focus-indicator {
+  width: 24px !important;
+  height: 24px !important;
 }
