--- a/src/app/usit/components/vendor-management/current-primary-vendor-list/current-primary-vendor-list.component.html
+++ b/src/app/usit/components/vendor-management/current-primary-vendor-list/current-primary-vendor-list.component.html
@@ -47,7 +47,7 @@
           <ng-container matColumnDef="Company">
             <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 16%"> Company</th>
             <td mat-cell *matCellDef="let element" style="width: 16%">
-              <span class="company-recruiter-info"> {{element.company}}</span>
+              <span class="company-recruiter-info" (click)="goToCompanyRecInfo(element)"> {{element.company}}</span>
             </td>
           </ng-container>
   
@@ -126,7 +126,7 @@
                   (click)="editVendor(vendor)" class="action-button-ed">
                   <mat-icon class="edit-icon">edit</mat-icon>
                 </button>
-                <button mat-icon-button [style.cursor]="'pointer'" matTooltip="Move to Vendor or FPV" matTooltipPosition="above" (click)="moveVendorToVendorOrFpv(vendor)">
+                <button mat-icon-button [style.cursor]="'pointer'" class="action-button-ed" matTooltip="Move to Vendor or FPV" matTooltipPosition="above" (click)="moveVendorToVendorOrFpv(vendor)">
                   <mat-icon class="edit-icon">arrow_forward</mat-icon>
                 </button>
                 <button mat-icon-button
