open reqs and job-description view change

--- a/src/app/usit/components/openreqs/job-description/job-description.component.html
+++ b/src/app/usit/components/openreqs/job-description/job-description.component.html
@@ -11,7 +11,7 @@
       <div class="info-container">
         <div class="info-item">
           <span class="static-label">Job Description :</span>
-          <span class="dynamic-value">{{dataSource.job_description}}</span>
+          <span class="dynamic-value" [innerHTML]="jobDescriptionWithLineBreaks"></span>
         </div>
         
       </div>
